REGRESSION: In Mail, Undo does not restore some characters I have deleted at the end of a line https://bugs.webkit.org/show_bug.cgi?id=30955 <rdar://problem/7067033>

Patch by Enrica Casucci <enrica@apple.com> on 2009-10-30
Reviewed by Darin Adler.

WebCore: 

When the command is deleteWordBackward or deleteWordForward
we should not add to the open typing command, but
create a new one.
        
Test: editing/undo/undo-deleteWord.html

* editing/TypingCommand.cpp:
(WebCore::TypingCommand::deleteKeyPressed): Always start a new command if the granularity is
not CharacterGranularity. 
(WebCore::TypingCommand::forwardDeleteKeyPressed): Always start a new command if the granularity is
not CharacterGranularity. 

LayoutTests: 

* editing/undo/undo-deleteWord-expected.txt: Added.
* editing/undo/undo-deleteWord.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@50358 bbb929c8-8fbe-4397-9dbb-9b2b20218538